public/core/v0.3/_sources/reference/tmlt/core/domains/spark_domains/index.rst.txt



********************
spark_domains
********************

.. py:module:: tmlt.core.domains.spark_domains

.. autoapi-nested-parse::

   Domains for Spark datatypes.









Data
====


.. py:data:: SparkColumnsDescriptor
   

   Mapping from column name to SparkColumnDescriptor.



Functions
=========

.. list-table::

   * - :func:`.convert_spark_schema`
     - Returns mapping from column name to SparkColumnDescriptor.
   * - :func:`.convert_pandas_domain`
     - Returns a mapping from column name to SparkColumnDescriptor.
   * - :func:`.convert_numpy_domain`
     - Returns a SparkColumnDescriptor for a NumpyDomain.

.. py:function:: convert_spark_schema(spark_schema)

   Returns mapping from column name to SparkColumnDescriptor.



.. py:function:: convert_pandas_domain(pandas_domain)

   Returns a mapping from column name to SparkColumnDescriptor.



.. py:function:: convert_numpy_domain(numpy_domain)

   Returns a SparkColumnDescriptor for a NumpyDomain.




Classes
=======

.. list-table::

   * - :class:`.SparkColumnDescriptor`
     - Base class for describing Spark column types.
   * - :class:`.SparkIntegerColumnDescriptor`
     - Describes an integer attribute in Spark.
   * - :class:`.SparkFloatColumnDescriptor`
     - Describes a float attribute in Spark.
   * - :class:`.SparkStringColumnDescriptor`
     - Describes a string attribute in Spark.
   * - :class:`.SparkDateColumnDescriptor`
     - Describes a date attribute in Spark.
   * - :class:`.SparkTimestampColumnDescriptor`
     - Describes a timestamp attribute in Spark.
   * - :class:`.SparkRowDomain`
     - Domain of Spark DataFrame rows.
   * - :class:`.SparkDataFrameDomain`
     - Domain of Spark DataFrames.
   * - :class:`.SparkGroupedDataFrameDomain`
     - Domain of grouped DataFrames.

   
.. py:class:: SparkColumnDescriptor

   Bases: :class:`abc.ABC`

   Base class for describing Spark column types.

   .. attribute:: allow_null

      If True, null values are permitted in the domain.






   .. py:method:: to_numpy_domain(self)
      :abstractmethod:

      Returns corresponding NumPy domain.


   .. py:method:: validate_column(self, sdf, col_name)

      Raises error if not all values in given DataFrame column match descriptor.

      :param sdf: Spark DataFrame to check.
      :param col_name: Name of column in sdf to be checked.


   .. py:method:: valid_py_value(self, val)
      :abstractmethod:

      Returns True if `val` is valid for described Spark column.


   .. py:method:: data_type(self)
      :property:

      Returns data type associated with Spark column.



   
.. py:class:: SparkIntegerColumnDescriptor

   Bases: :class:`SparkColumnDescriptor`

   Describes an integer attribute in Spark.





   .. py:attribute:: SIZE_TO_TYPE
      

      Mapping from size to Spark type.

   .. py:attribute:: SIZE_TO_MIN_MAX
      

      Mapping from size to tuple of minimum and maximum value allowed.

   .. py:attribute:: allow_null
      :annotation: :bool = False

      If True, null values are permitted in the domain.

   .. py:attribute:: size
      :annotation: :int = 64

      Number of bits a member of the domain occupies. Must be 32 or 64.


   .. py:method:: to_numpy_domain(self)

      Returns corresponding NumPy domain.


   .. py:method:: valid_py_value(self, val)

      Returns True if value is a valid python value for the descriptor.


   .. py:method:: data_type(self)
      :property:

      Returns data type associated with Spark column.


   .. py:method:: validate_column(self, sdf, col_name)

      Raises error if not all values in given DataFrame column match descriptor.

      :param sdf: Spark DataFrame to check.
      :param col_name: Name of column in sdf to be checked.



   
.. py:class:: SparkFloatColumnDescriptor

   Bases: :class:`SparkColumnDescriptor`

   Describes a float attribute in Spark.





   .. py:attribute:: SIZE_TO_TYPE
      

      Mapping from size to Spark type.

   .. py:attribute:: allow_nan
      :annotation: :bool = False

      If True, NaNs are permitted in the domain.

   .. py:attribute:: allow_inf
      :annotation: :bool = False

      If True, infs are permitted in the domain.

   .. py:attribute:: allow_null
      :annotation: :bool = False

      If True, null values are permitted in the domain.

      .. note:: Nulls aren't supported in pd.

   .. py:attribute:: size
      :annotation: :int = 64

      Number of bits a member of the domain occupies. Must be 32 or 64.


   .. py:method:: to_numpy_domain(self)

      Returns corresponding NumPy domain.


   .. py:method:: validate_column(self, sdf, col_name)

      Raises error if not all values in given DataFrame column match descriptor.

      :param sdf: Spark DataFrame to check.
      :param col_name: Name of column in sdf to be checked.


   .. py:method:: valid_py_value(self, val)

      Returns True if value is a valid python value for the descriptor.

      In particular, this returns True only if one of the following is true:

      - val is `float("nan")` and NaN is allowed.
      - val is `float("inf")` or `float("-inf")`, and inf values are allowed.
      - val is a float that can be represented in `size` bits.
      - val is None and nulls are allowed in the domain.


   .. py:method:: data_type(self)
      :property:

      Returns data type associated with Spark column.



   
.. py:class:: SparkStringColumnDescriptor

   Bases: :class:`SparkColumnDescriptor`

   Describes a string attribute in Spark.





   .. py:attribute:: allow_null
      :annotation: :bool = False

      If True, null values are permitted in the domain.


   .. py:method:: to_numpy_domain(self)

      Returns corresponding NumPy domain.


   .. py:method:: valid_py_value(self, val)

      Returns True if value is a valid python value for the descriptor.


   .. py:method:: data_type(self)
      :property:

      Returns data type associated with Spark column.


   .. py:method:: validate_column(self, sdf, col_name)

      Raises error if not all values in given DataFrame column match descriptor.

      :param sdf: Spark DataFrame to check.
      :param col_name: Name of column in sdf to be checked.



   
.. py:class:: SparkDateColumnDescriptor

   Bases: :class:`SparkColumnDescriptor`

   Describes a date attribute in Spark.





   .. py:attribute:: allow_null
      :annotation: :bool = False

      If True, null values are permitted in the domain.


   .. py:method:: to_numpy_domain(self)

      Returns corresponding NumPy domain.

      .. note::

         Date types are not supported in NumPy; this method always
         raises an exception.


   .. py:method:: valid_py_value(self, val)

      Returns True if the value is a valid Python value for the descriptor.


   .. py:method:: data_type(self)
      :property:

      Returns data type associated with Spark column.


   .. py:method:: validate_column(self, sdf, col_name)

      Raises error if not all values in given DataFrame column match descriptor.

      :param sdf: Spark DataFrame to check.
      :param col_name: Name of column in sdf to be checked.



   
.. py:class:: SparkTimestampColumnDescriptor

   Bases: :class:`SparkColumnDescriptor`

   Describes a timestamp attribute in Spark.





   .. py:attribute:: allow_null
      :annotation: :bool = False

      If True, null values are permitted in the domain.


   .. py:method:: to_numpy_domain(self)

      Returns corresponding NumPy domain.

      .. note::

         Timestamp types are not supported in NumPy; this method always
         raises an exception.


   .. py:method:: valid_py_value(self, val)

      Returns True if the value is a valid Python value for the descriptor.


   .. py:method:: data_type(self)
      :property:

      Returns data type associated with Spark column.


   .. py:method:: validate_column(self, sdf, col_name)

      Raises error if not all values in given DataFrame column match descriptor.

      :param sdf: Spark DataFrame to check.
      :param col_name: Name of column in sdf to be checked.



   
.. py:class:: SparkRowDomain

   Bases: :class:`tmlt.core.domains.base.Domain`

   Domain of Spark DataFrame rows.





   .. py:attribute:: schema
      :annotation: :SparkColumnsDescriptor

      Mapping from column name to column descriptors.


   .. py:method:: validate(self, value)
      :abstractmethod:

      Raises error if value is not a row with matching schema.


   .. py:method:: __contains__(self, value)
      :abstractmethod:

      Returns True if value is a row with matching schema.


   .. py:method:: __eq__(self, other)

      Return True if the classes are equivalent.


   .. py:method:: carrier_type(self)
      :property:

      Returns carrier types for members of SparkRowDomain.



   
.. py:class:: SparkDataFrameDomain

   Bases: :class:`tmlt.core.domains.base.Domain`

   Domain of Spark DataFrames.





   .. py:attribute:: schema
      :annotation: :SparkColumnsDescriptor

      Mapping from column name to column descriptors.


   .. py:method:: validate(self, value)

      Raises error if value is not a DataFrame with matching schema.


   .. py:method:: __eq__(self, other)

      Return True if the classes are equivalent.


   .. py:method:: carrier_type(self)
      :property:

      Returns carrier type for the domain.


   .. py:method:: __getitem__(self, col_name)

      Returns column descriptor for given column.


   .. py:method:: from_spark_schema(cls, schema)
      :classmethod:

      Returns a SparkDataFrameDomain constructed from a Spark schema.

      .. note::

         If schema contains float types, nans and infs are allowed since the
         schema places no restrictions on these.

      :param schema: Spark schema for constructing domain.


   .. py:method:: spark_schema(self)
      :property:

      Returns Spark schema object according to domain.

      .. note::

         There isn't a one-to-one correspondence between Spark schema objects
         and SparkDataFrameDomain objects since the domains encode additional
         information about allowing nans or infs in float columns. Other
         information may get added in the future and these cannot be represented
         with the Spark schema (StructType) object.


   .. py:method:: project(self, cols)

      Project this domain to a subset of columns.

      The column ordering of the schema is used if it differs from the input ordering.


   .. py:method:: __contains__(self, value)

      Returns True if value is in the domain.



   
.. py:class:: SparkGroupedDataFrameDomain

   Bases: :class:`tmlt.core.domains.base.Domain`

   Domain of grouped DataFrames.





   .. py:attribute:: schema
      :annotation: :SparkColumnsDescriptor

      Mapping from column name to column descriptors for all columns.

   .. py:attribute:: group_keys
      :annotation: :pyspark.sql.DataFrame

      DataFrame containing group keys as rows.


   .. py:method:: carrier_type(self)
      :property:

      Returns carrier type for the domain.


   .. py:method:: spark_schema(self)
      :property:

      Returns Spark schema object according to domain.

      .. note::

         There isn't a one-to-one correspondence between Spark schema objects
         and SparkDataFrameDomain objects since the domains encode additional
         information about allowing nans or infs in float columns. Other
         information may get added in the future and these cannot be represented
         with the Spark schema (StructType) object.


   .. py:method:: validate(self, value)

      Raises error if value is not a GroupedDataFrame with matching group_keys.


   .. py:method:: get_group_domain(self)

      Return the domain for one of the groups.


   .. py:method:: __eq__(self, other)

      Return True if the schemas and group keys are identical.


   .. py:method:: __getitem__(self, col_name)

      Returns column descriptor for given column.


   .. py:method:: __contains__(self, value)

      Returns True if value is in the domain.






